--- a/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-22 08:52+0300\n"
+"POT-Creation-Date: 2016-01-25 15:28+0300\n"
 "PO-Revision-Date: 2016-01-16 10:10+0300\n"
 "Last-Translator: Pyotr Ermishkin <quasiyoke@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -17,111 +17,110 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: randtalkbot/stranger.py:23
+#: randtalkbot/stranger.py:28
 msgid "Female"
 msgstr "Женский"
 
-#: randtalkbot/stranger.py:24
+#: randtalkbot/stranger.py:29
 msgid "Male"
 msgstr "Мужской"
 
-#: randtalkbot/stranger.py:25
+#: randtalkbot/stranger.py:30
 msgid "Not specified"
 msgstr "Не указано"
 
-#: randtalkbot/stranger.py:28
+#: randtalkbot/stranger.py:33
 msgid "boy"
 msgstr "мальчик"
 
-#: randtalkbot/stranger.py:29
+#: randtalkbot/stranger.py:34
 msgid "man"
 msgstr "мужчина"
 
-#: randtalkbot/stranger.py:31
+#: randtalkbot/stranger.py:36
 msgid "girl"
 msgstr "девочка"
 
-#: randtalkbot/stranger.py:32
+#: randtalkbot/stranger.py:37
 msgid "woman"
 msgstr "женщина"
 
-#: randtalkbot/stranger.py:99
+#: randtalkbot/stranger.py:112
+#, python-brace-format
+msgid ""
+"You've received one bonus for inviting a person to the bot. Bonuses will "
+"help you to find partners quickly. Total bonus count: {0}. Congratulations!"
+msgstr ""
+"Вы получили один бонус за то, что привлекли пользователя в Rand Talk. Бонусы "
+"помогут вам быстрее находить собеседников. Общее количество бонусов: {0}. "
+"Поздравляем! 🤑"
+
+#: randtalkbot/stranger.py:128
 #, python-brace-format
 msgid ""
 "You're still searching for partner among {0} people. You can talk with some "
-"of them if you remove partner's sex restrictions or extend the list of "
-"languages you know using /setup command. You can share the link to the bot "
-"between your friends: telegram.me/RandTalkBot or [vote for Rand Talk]"
-"(https://telegram.me/storebot?start=randtalkbot). More people -- more fun!"
+"of them right now if you remove partner's sex restrictions or extend the "
+"list of languages you know using /setup command.\n"
+"More people -- more fun! Spread Rand Talk between your friends. The more "
+"people will use your link -- the faster partner's search will be. Share the "
+"following message in your chats:"
 msgstr ""
-"Поиск собеседника продолжается среди {0} человек. Вы можете поговорить с "
+"Поиск партнера продолжается среди {0} человек. Вы можете поговорить с "
 "некоторыми из них прямо сейчас, если уберете ограничение на пол собеседника "
-"или укажете больше языков, которыми вы владеете, командой /setup. Также вы "
-"можете [проголосовать за Rand Talk](https://telegram.me/storebot?"
-"start=randtalkbot). Больше пользователей — больше развлечений!"
+"или укажете больше языков, которыми вы владеете, командой /setup.\n"
+"Больше пользователей — больше развлечений! Расскажите о Rand Talk своим "
+"друзьям. Чем больше пользователей пройдут по ссылке, тем быстрее будет поиск "
+"партнера. Разошлите по вашим чатам следующее сообщение:"
 
-#: randtalkbot/stranger.py:117
+#: randtalkbot/stranger.py:136
+#, python-brace-format
+msgid ""
+"I'm the bot matching you with a random person. Chat with anonymous strangers "
+"speaking on your language. Visit: {0}"
+msgstr ""
+"Я — бот для общения со случайными собеседниками заданного пола. Заходите: {0}"
+
+#: randtalkbot/stranger.py:151
 msgid "Looking for partner was stopped."
 msgstr "Поиск партнера прекращен"
 
-#: randtalkbot/stranger.py:124
+#: randtalkbot/stranger.py:158
 msgid "Chat was finished. Feel free to /begin a new one."
 msgstr "Беседа закончена. Чтобы начать новый разговор, скомандуйте /begin."
 
-#: randtalkbot/stranger.py:169
+#: randtalkbot/stranger.py:212
 msgid "Your partner has left chat. Feel free to /begin a new conversation."
 msgstr ""
 "Собеседник покинул чат. 😿 Чтобы начать новый разговор, скомандуйте /begin."
 
-#: randtalkbot/stranger.py:209
+#: randtalkbot/stranger.py:232
 #, python-brace-format
-msgid "Here's another stranger. Use {0} please."
-msgstr "Подобран новый собеседник. Используйте пожалуйста {0} 🤗"
+msgid "Use {0} please."
+msgstr "Используйте пожалуйста {0}."
 
-#: randtalkbot/stranger.py:214
+#: randtalkbot/stranger.py:236
 #, python-brace-format
-msgid "Here's another stranger. You can use the following languages: {0}."
-msgstr "Подобран новый собеседник. Вы можете говорить на этих языках: {0} 🤗"
-
-#: randtalkbot/stranger.py:218
-msgid "Here's another stranger. Have fun!"
-msgstr "Подобран новый собеседник. Общайтесь на здоровье 🤗"
-
-#: randtalkbot/stranger.py:234
-#, python-brace-format
-msgid "Your partner is here. Use {0} please."
-msgstr "Собеседник найден. Используйте пожалуйста {0} 🤗"
-
-#: randtalkbot/stranger.py:239
-#, python-brace-format
-msgid "Your partner is here. You can use the following languages: {0}."
-msgstr "Собеседник найден. Вы можете использовать следующие языки: {0}."
+msgid "You can use the following languages: {0}."
+msgstr "Вы можете использовать следующие языки: {0}."
 
 #: randtalkbot/stranger.py:243
-msgid "Your partner is here. Have a nice chat!"
-msgstr "Собеседник найден. Приятного общения 🤗"
+msgid "Here's another stranger."
+msgstr "Подобран новый собеседник."
 
-#: randtalkbot/stranger.py:280
-msgid "Looking for a stranger for you."
-msgstr "Идет подбор партнера 🤔"
+#: randtalkbot/stranger.py:245
+msgid "Your partner is here."
+msgstr "Собеседник найден."
 
-#: randtalkbot/stranger_handler.py:82
-msgid ""
-"*Manual*\n"
-"\n"
-"Use /begin to start looking for a conversational partner, once you're "
-"matched you can use /end to end the conversation."
-msgstr ""
-"*Руководство*\n"
-"\n"
-"Чтобы приступить к поиску собеседника, скомандуйте /begin. Когда ваш партнер "
-"будет найден, вы сможете закончить разговор, выполнив /end."
+#: randtalkbot/stranger.py:249
+#, python-brace-format
+msgid "You've used one bonus. {0} bonus(es) left."
+msgstr "Вы использовали один бонус. {0} бонус(ов) осталось."
 
-#: randtalkbot/stranger_handler.py:98
-msgid "Internal error. Admins are already notified about that"
-msgstr "Внутренняя ошибка. Мы уже работаем над этим. 🤕"
+#: randtalkbot/stranger.py:253
+msgid "You've used your last bonus."
+msgstr "Был использован ваш последний бонус."
 
-#: randtalkbot/stranger_handler.py:106
+#: randtalkbot/stranger.py:265
 #, python-brace-format
 msgid ""
 "Your partner's been looking for you for {0} hr. Say him \"Hello\" -- if he "
@@ -130,7 +129,7 @@ msgstr ""
 "Партнер ждал вас {0} ч. Поприветствуйте его — если он не ответит, вы можете "
 "вновь запустить поиск командой /begin."
 
-#: randtalkbot/stranger_handler.py:112
+#: randtalkbot/stranger.py:270
 #, python-brace-format
 msgid ""
 "Your partner's been looking for you for {0} min. Say him \"Hello\" -- if he "
@@ -139,7 +138,19 @@ msgstr ""
 "Партнер ждал вас {0} мин. Поприветствуйте его — если он не ответит, вы "
 "можете вновь запустить поиск командой /begin."
 
-#: randtalkbot/stranger_handler.py:126
+#: randtalkbot/stranger.py:276
+msgid "Have a nice chat!"
+msgstr "Приятного общения 🤗"
+
+#: randtalkbot/stranger.py:344
+msgid "Looking for a stranger for you."
+msgstr "Идет подбор партнера 🤔"
+
+#: randtalkbot/stranger_handler.py:84
+msgid "Internal error. Admins are already notified about that"
+msgstr "Внутренняя ошибка. Мы уже работаем над этим. 🤕"
+
+#: randtalkbot/stranger_handler.py:100
 #, python-brace-format
 msgid ""
 "*Help*\n"
@@ -169,20 +180,31 @@ msgstr ""
 "\n"
 "Версия {1}"
 
-#: randtalkbot/stranger_handler.py:151 randtalkbot/stranger_handler.py:165
-#: randtalkbot/stranger_handler.py:189
+#: randtalkbot/stranger_handler.py:141
+msgid ""
+"*Manual*\n"
+"\n"
+"Use /begin to start looking for a conversational partner, once you're "
+"matched you can use /end to end the conversation."
+msgstr ""
+"*Руководство*\n"
+"\n"
+"Чтобы приступить к поиску собеседника, скомандуйте /begin. Когда ваш партнер "
+"будет найден, вы сможете закончить разговор, выполнив /end."
+
+#: randtalkbot/stranger_handler.py:155 randtalkbot/stranger_handler.py:173
 msgid "Messages of this type aren't supported."
 msgstr "Сообщения такого типа не поддерживаются 😞"
 
-#: randtalkbot/stranger_handler.py:174 randtalkbot/stranger_handler.py:197
-msgid "Your partner has blocked me! How did you do that?!"
-msgstr "Ваш собеседник меня заблокировал! И как только вам это удается?! 😕"
-
-#: randtalkbot/stranger_handler.py:179
+#: randtalkbot/stranger_handler.py:165
 msgid "Unknown command. Look /help for the full list of commands."
 msgstr "Неизвестная команда. Чтобы посмотреть все команды, скомандуйте /help."
 
-#: randtalkbot/stranger_setup_wizard.py:61
+#: randtalkbot/stranger_handler.py:181
+msgid "Your partner has blocked me! How did you do that?!"
+msgstr "Ваш собеседник меня заблокировал! И как только вам это удается?! 😕"
+
+#: randtalkbot/stranger_setup_wizard.py:49
 msgid ""
 "Thank you. Use /begin to start looking for a conversational partner, once "
 "you're matched you can use /end to end the conversation."
@@ -191,24 +213,14 @@ msgstr ""
 "begin. Когда ваш партнер будет найден, вы сможете закончить разговор, "
 "выполнив /end."
 
-#: randtalkbot/stranger_setup_wizard.py:87
-msgid "Finish setup process please. After that you can start using bot."
-msgstr ""
-"Пожалуйста, закончите процесс настройки. После него вы сможете приступить к "
-"пользованию ботом."
-
-#: randtalkbot/stranger_setup_wizard.py:96
-msgid "To interrupt setup use /cancel."
-msgstr "Чтобы прервать настройку, скомандуйте /cancel."
-
-#: randtalkbot/stranger_setup_wizard.py:105
+#: randtalkbot/stranger_setup_wizard.py:73
 msgid "Please specify at least one language."
 msgstr ""
 "Укажите пожалуйста хоть один язык\n"
 "\n"
 "Please specify at least one language"
 
-#: randtalkbot/stranger_setup_wizard.py:109
+#: randtalkbot/stranger_setup_wizard.py:77
 #, python-brace-format
 msgid "Language \"{0}\" wasn't found."
 msgstr ""
@@ -217,7 +229,7 @@ msgstr ""
 "\n"
 "Language “{0}” wasn't found. Try to specify language in English."
 
-#: randtalkbot/stranger_setup_wizard.py:113
+#: randtalkbot/stranger_setup_wizard.py:81
 msgid ""
 "Too much languages were specified. Please shorten your list to 6 languages."
 msgstr ""
@@ -226,8 +238,8 @@ msgstr ""
 "\n"
 "Too much languages were specified. Please shorten your list to 6 languages."
 
-#: randtalkbot/stranger_setup_wizard.py:126
-#: randtalkbot/stranger_setup_wizard.py:144
+#: randtalkbot/stranger_setup_wizard.py:94
+#: randtalkbot/stranger_setup_wizard.py:113
 #, python-brace-format
 msgid "Unknown sex: \"{0}\" -- is not a valid sex name."
 msgstr ""
@@ -236,7 +248,13 @@ msgstr ""
 "Unknown sex: “{0}” — is not a valid sex name. Are you sure you aren't "
 "mistaken?"
 
-#: randtalkbot/stranger_setup_wizard.py:171
+#: randtalkbot/stranger_setup_wizard.py:142
+msgid "Finish setup process please. After that you can start using bot."
+msgstr ""
+"Пожалуйста, закончите процесс настройки. После него вы сможете приступить к "
+"пользованию ботом."
+
+#: randtalkbot/stranger_setup_wizard.py:161
 msgid ""
 "Enumerate the languages you speak like this: \"English, Italian\" -- in "
 "descending order of your speaking convenience or just pick one at special "
@@ -250,11 +268,11 @@ msgstr ""
 "descending order of your speaking convenience or just pick one at special "
 "keyboard."
 
-#: randtalkbot/stranger_setup_wizard.py:176
+#: randtalkbot/stranger_setup_wizard.py:166
 msgid "Leave the language unchanged"
 msgstr "Не менять язык"
 
-#: randtalkbot/stranger_setup_wizard.py:177
+#: randtalkbot/stranger_setup_wizard.py:167
 #, python-brace-format
 msgid ""
 "Your current language is {0}. Enumerate the languages you speak like this: "
@@ -269,11 +287,11 @@ msgstr ""
 "“English, Italian” — in descending order of your speaking convenience or "
 "just pick one at special keyboard."
 
-#: randtalkbot/stranger_setup_wizard.py:181
+#: randtalkbot/stranger_setup_wizard.py:171
 msgid "Leave the languages unchanged"
 msgstr "Не менять языки"
 
-#: randtalkbot/stranger_setup_wizard.py:182
+#: randtalkbot/stranger_setup_wizard.py:172
 #, python-brace-format
 msgid ""
 "Your current languages are: {0}. Enumerate the languages you speak the same "
@@ -288,7 +306,7 @@ msgstr ""
 "way, in descending order of your speaking convenience or just pick one at "
 "special keyboard."
 
-#: randtalkbot/stranger_setup_wizard.py:194
+#: randtalkbot/stranger_setup_wizard.py:184
 msgid ""
 "Set up your sex. If you pick \"Not Specified\" you can't choose your "
 "partner's sex."
@@ -296,6 +314,6 @@ msgstr ""
 "Выберите ваш пол. Вы не сможете задать пол собеседника, если нажмете «Не "
 "указано»."
 
-#: randtalkbot/stranger_setup_wizard.py:200
+#: randtalkbot/stranger_setup_wizard.py:190
 msgid "Choose your partner's sex"
 msgstr "Выберите пол собеседника"
