--- a/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-22 08:52+0300\n"
+"POT-Creation-Date: 2016-01-25 15:28+0300\n"
 "PO-Revision-Date: Wed Jan 20 2016 21:18:36 GMT+0100\n"
 "Last-Translator: Marco Giustetto <arducode@gmail.com>\n"
 "Language-Team: Italian\n"
@@ -17,112 +17,111 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: randtalkbot/stranger.py:23
+#: randtalkbot/stranger.py:28
 msgid "Female"
 msgstr "Femmina"
 
-#: randtalkbot/stranger.py:24
+#: randtalkbot/stranger.py:29
 msgid "Male"
 msgstr "Maschio"
 
-#: randtalkbot/stranger.py:25
+#: randtalkbot/stranger.py:30
 msgid "Not specified"
 msgstr "Non specificare"
 
-#: randtalkbot/stranger.py:28
+#: randtalkbot/stranger.py:33
 msgid "boy"
 msgstr "ragazzo"
 
-#: randtalkbot/stranger.py:29
+#: randtalkbot/stranger.py:34
 msgid "man"
 msgstr "uomo"
 
-#: randtalkbot/stranger.py:31
+#: randtalkbot/stranger.py:36
 msgid "girl"
 msgstr "ragazza"
 
-#: randtalkbot/stranger.py:32
+#: randtalkbot/stranger.py:37
 msgid "woman"
 msgstr "donna"
 
-#: randtalkbot/stranger.py:99
+#: randtalkbot/stranger.py:112
+#, python-brace-format
+msgid ""
+"You've received one bonus for inviting a person to the bot. Bonuses will "
+"help you to find partners quickly. Total bonus count: {0}. Congratulations!"
+msgstr ""
+"Hai ricevuto un bonus per aver invitato una persona al bot. I bonus vi "
+"aiuterà a trovare partner in fretta. Conteggio totale bonus: {0}. "
+"Congratulazioni! 🤑"
+
+#: randtalkbot/stranger.py:128
 #, python-brace-format
 msgid ""
 "You're still searching for partner among {0} people. You can talk with some "
-"of them if you remove partner's sex restrictions or extend the list of "
-"languages you know using /setup command. You can share the link to the bot "
-"between your friends: telegram.me/RandTalkBot or [vote for Rand Talk]"
-"(https://telegram.me/storebot?start=randtalkbot). More people -- more fun!"
+"of them right now if you remove partner's sex restrictions or extend the "
+"list of languages you know using /setup command.\n"
+"More people -- more fun! Spread Rand Talk between your friends. The more "
+"people will use your link -- the faster partner's search will be. Share the "
+"following message in your chats:"
 msgstr ""
 "Sto trovando {0} persone disponibili a parlare. Per parlarci puoi aspettare "
 "un po', oppure selezionare “Non specificare” come sesso del tuo partner di "
-"chat o selezionare altre lingue premendo /setup. Inoltre è possibile [valuta "
-"Rand Talk](https://telegram.me/storebot?start=randtalkbot). Più persone — "
-"più divertimento!"
+"chat o selezionare altre lingue premendo /setup.\n"
+"Più persone — più divertimento! Stendere Rand Talk tra i vostri amici. Più "
+"persone useranno il tuo link — ricerca del partner più veloce sarà. "
+"Condividi il seguente messaggio nelle vostre chat:"
 
-#: randtalkbot/stranger.py:117
+#: randtalkbot/stranger.py:136
+#, python-brace-format
+msgid ""
+"I'm the bot matching you with a random person. Chat with anonymous strangers "
+"speaking on your language. Visit: {0}"
+msgstr ""
+"Sono il ragazzo più adatti con una persona a caso. Chatta con gli "
+"sconosciuti anonimi che parlano della lingua. Visita: {0}"
+
+#: randtalkbot/stranger.py:151
 msgid "Looking for partner was stopped."
 msgstr "Ricerca partner per la chat interrotta"
 
-#: randtalkbot/stranger.py:124
+#: randtalkbot/stranger.py:158
 msgid "Chat was finished. Feel free to /begin a new one."
 msgstr "Chat chiusa. Premi /begin per iniziarne un'altra!"
 
-#: randtalkbot/stranger.py:169
+#: randtalkbot/stranger.py:212
 msgid "Your partner has left chat. Feel free to /begin a new conversation."
 msgstr ""
 "L'altra persona ha lasciato la chat. 😿 Premi /begin per iniziarne un'altra!"
 
-#: randtalkbot/stranger.py:209
+#: randtalkbot/stranger.py:232
 #, python-brace-format
-msgid "Here's another stranger. Use {0} please."
-msgstr "Ho trovato un'altra persona. Parla in {0} per favore."
+msgid "Use {0} please."
+msgstr "Parla {0} per favore."
 
-#: randtalkbot/stranger.py:214
+#: randtalkbot/stranger.py:236
 #, python-brace-format
-msgid "Here's another stranger. You can use the following languages: {0}."
-msgstr "Ho trovato un'altra persona. Puoi parlarle in queste lingue: {0}."
-
-#: randtalkbot/stranger.py:218
-msgid "Here's another stranger. Have fun!"
-msgstr "Ho trovato un'altra persona. 🤗 Buona chat!"
-
-#: randtalkbot/stranger.py:234
-#, python-brace-format
-msgid "Your partner is here. Use {0} please."
-msgstr "Il vostro partner è qui. Parla {0} per favore."
-
-#: randtalkbot/stranger.py:239
-#, python-brace-format
-msgid "Your partner is here. You can use the following languages: {0}."
-msgstr "Il vostro partner è qui. Si può parlare le seguenti lingue: {0}."
+msgid "You can use the following languages: {0}."
+msgstr "Si può parlare le seguenti lingue: {0}."
 
 #: randtalkbot/stranger.py:243
-msgid "Your partner is here. Have a nice chat!"
-msgstr "La chat è pronta. Divertiti :) 🤗"
+msgid "Here's another stranger."
+msgstr "Ho trovato un'altra persona."
 
-#: randtalkbot/stranger.py:280
-msgid "Looking for a stranger for you."
-msgstr "Ricerca partner per la chat in corso... 🤔"
+#: randtalkbot/stranger.py:245
+msgid "Your partner is here."
+msgstr "Il vostro partner è qui."
 
-#: randtalkbot/stranger_handler.py:82
-msgid ""
-"*Manual*\n"
-"\n"
-"Use /begin to start looking for a conversational partner, once you're "
-"matched you can use /end to end the conversation."
-msgstr ""
-"*Comandi*\n"
-"\n"
-"Premi (o scrivi) /begin per cercare una persona con cui iniziare la chat; se "
-"vuoi cambiare persona, chiudi la chat premendo o scrivendo /end e cerca "
-"un'altra persona."
+#: randtalkbot/stranger.py:249
+#, python-brace-format
+msgid "You've used one bonus. {0} bonus(es) left."
+msgstr "Hai usato un bonus. {0} bonus a sinistra."
 
-#: randtalkbot/stranger_handler.py:98
-msgid "Internal error. Admins are already notified about that"
-msgstr "Errore del bot. L'amministratore sta lavorando per risolverlo 🤕"
+#: randtalkbot/stranger.py:253
+msgid "You've used your last bonus."
+msgstr "Hai usato il tuo ultimo bonus."
 
-#: randtalkbot/stranger_handler.py:106
+#: randtalkbot/stranger.py:265
 #, python-brace-format
 msgid ""
 "Your partner's been looking for you for {0} hr. Say him \"Hello\" -- if he "
@@ -131,7 +130,7 @@ msgstr ""
 "Il vostro partner è stato alla ricerca di voi per {0} ore. Lui dire “Ciao” — "
 "se non risponde a voi, cercare lanciare nuovamente il comando /begin."
 
-#: randtalkbot/stranger_handler.py:112
+#: randtalkbot/stranger.py:270
 #, python-brace-format
 msgid ""
 "Your partner's been looking for you for {0} min. Say him \"Hello\" -- if he "
@@ -140,7 +139,19 @@ msgstr ""
 "Il vostro partner è stato alla ricerca di voi per {0} min. Lui dire “Ciao” — "
 "se non risponde a voi, cercare lanciare nuovamente il comando /begin."
 
-#: randtalkbot/stranger_handler.py:126
+#: randtalkbot/stranger.py:276
+msgid "Have a nice chat!"
+msgstr "Divertiti 🤗"
+
+#: randtalkbot/stranger.py:344
+msgid "Looking for a stranger for you."
+msgstr "Ricerca partner per la chat in corso... 🤔"
+
+#: randtalkbot/stranger_handler.py:84
+msgid "Internal error. Admins are already notified about that"
+msgstr "Errore del bot. L'amministratore sta lavorando per risolverlo 🤕"
+
+#: randtalkbot/stranger_handler.py:100
 #, python-brace-format
 msgid ""
 "*Help*\n"
@@ -171,22 +182,34 @@ msgstr ""
 "\n"
 "versione {1}"
 
-#: randtalkbot/stranger_handler.py:151 randtalkbot/stranger_handler.py:165
-#: randtalkbot/stranger_handler.py:189
+#: randtalkbot/stranger_handler.py:141
+msgid ""
+"*Manual*\n"
+"\n"
+"Use /begin to start looking for a conversational partner, once you're "
+"matched you can use /end to end the conversation."
+msgstr ""
+"*Comandi*\n"
+"\n"
+"Premi (o scrivi) /begin per cercare una persona con cui iniziare la chat; se "
+"vuoi cambiare persona, chiudi la chat premendo o scrivendo /end e cerca "
+"un'altra persona."
+
+#: randtalkbot/stranger_handler.py:155 randtalkbot/stranger_handler.py:173
 msgid "Messages of this type aren't supported."
 msgstr ""
 "Mi dispiace, il bot non supporta messaggi inoltrati o risposte ad altri "
 "messaggi 😞"
 
-#: randtalkbot/stranger_handler.py:174 randtalkbot/stranger_handler.py:197
-msgid "Your partner has blocked me! How did you do that?!"
-msgstr "L'altra persona mi ha bloccato. Cosa hai fatto?! 😕"
-
-#: randtalkbot/stranger_handler.py:179
+#: randtalkbot/stranger_handler.py:165
 msgid "Unknown command. Look /help for the full list of commands."
 msgstr "Comando sconosciuto. Premi /help per una lista di tutti i comandi."
 
-#: randtalkbot/stranger_setup_wizard.py:61
+#: randtalkbot/stranger_handler.py:181
+msgid "Your partner has blocked me! How did you do that?!"
+msgstr "L'altra persona mi ha bloccato. Cosa hai fatto?! 😕"
+
+#: randtalkbot/stranger_setup_wizard.py:49
 msgid ""
 "Thank you. Use /begin to start looking for a conversational partner, once "
 "you're matched you can use /end to end the conversation."
@@ -195,26 +218,18 @@ msgstr ""
 "cui iniziare la chat; se vuoi cambiare persona, chiudi la chat premendo o "
 "scrivendo /end e cerca un'altra persona."
 
-#: randtalkbot/stranger_setup_wizard.py:87
-msgid "Finish setup process please. After that you can start using bot."
-msgstr "Devi completare il profilo prima di iniziare ad usare il bot."
-
-#: randtalkbot/stranger_setup_wizard.py:96
-msgid "To interrupt setup use /cancel."
-msgstr "Per interrompere la personalizzazione del profilo premi /cancel."
-
-#: randtalkbot/stranger_setup_wizard.py:105
+#: randtalkbot/stranger_setup_wizard.py:73
 msgid "Please specify at least one language."
 msgstr "Scegli almeno una lingua"
 
-#: randtalkbot/stranger_setup_wizard.py:109
+#: randtalkbot/stranger_setup_wizard.py:77
 #, python-brace-format
 msgid "Language \"{0}\" wasn't found."
 msgstr ""
 "Non ho trovato la lingua “{0}”. 😳 Prova a scrivere il nome di quella lingua "
 "in inglese."
 
-#: randtalkbot/stranger_setup_wizard.py:113
+#: randtalkbot/stranger_setup_wizard.py:81
 msgid ""
 "Too much languages were specified. Please shorten your list to 6 languages."
 msgstr ""
@@ -223,15 +238,19 @@ msgstr ""
 "\n"
 "Too much languages were specified. Please shorten your list to 6 languages."
 
-#: randtalkbot/stranger_setup_wizard.py:126
-#: randtalkbot/stranger_setup_wizard.py:144
+#: randtalkbot/stranger_setup_wizard.py:94
+#: randtalkbot/stranger_setup_wizard.py:113
 #, python-brace-format
 msgid "Unknown sex: \"{0}\" -- is not a valid sex name."
 msgstr ""
 "Sesso sconosciuto: non conosco che sesso sia “{0}”. Controlla di non aver "
 "fatto errori di ortografia 😉"
 
-#: randtalkbot/stranger_setup_wizard.py:171
+#: randtalkbot/stranger_setup_wizard.py:142
+msgid "Finish setup process please. After that you can start using bot."
+msgstr "Devi completare il profilo prima di iniziare ad usare il bot."
+
+#: randtalkbot/stranger_setup_wizard.py:161
 msgid ""
 "Enumerate the languages you speak like this: \"English, Italian\" -- in "
 "descending order of your speaking convenience or just pick one at special "
@@ -241,11 +260,11 @@ msgstr ""
 "le \") — nell'ordine in cui ti interessano di più o scegline una dalla "
 "tastiera del bot."
 
-#: randtalkbot/stranger_setup_wizard.py:176
+#: randtalkbot/stranger_setup_wizard.py:166
 msgid "Leave the language unchanged"
 msgstr "Non cambiare la lingua"
 
-#: randtalkbot/stranger_setup_wizard.py:177
+#: randtalkbot/stranger_setup_wizard.py:167
 #, python-brace-format
 msgid ""
 "Your current language is {0}. Enumerate the languages you speak like this: "
@@ -256,11 +275,11 @@ msgstr ""
 "“English, Italian” (senza scrivere le \") — nell'ordine in cui ti "
 "interessano di più o scegline una dalla tastiera del bot."
 
-#: randtalkbot/stranger_setup_wizard.py:181
+#: randtalkbot/stranger_setup_wizard.py:171
 msgid "Leave the languages unchanged"
 msgstr "Non cambiare le lingue"
 
-#: randtalkbot/stranger_setup_wizard.py:182
+#: randtalkbot/stranger_setup_wizard.py:172
 #, python-brace-format
 msgid ""
 "Your current languages are: {0}. Enumerate the languages you speak the same "
@@ -271,7 +290,7 @@ msgstr ""
 "“English, Italian” (senza scrivere le \") — nell'ordine in cui ti "
 "interessano di più o scegline una dalla tastiera del bot."
 
-#: randtalkbot/stranger_setup_wizard.py:194
+#: randtalkbot/stranger_setup_wizard.py:184
 msgid ""
 "Set up your sex. If you pick \"Not Specified\" you can't choose your "
 "partner's sex."
@@ -279,6 +298,6 @@ msgstr ""
 "Seleziona il tuo sesso. Se scegli \"Non specificare\" non potrai sceglier il "
 "sesso del tuo partner della chat."
 
-#: randtalkbot/stranger_setup_wizard.py:200
+#: randtalkbot/stranger_setup_wizard.py:190
 msgid "Choose your partner's sex"
 msgstr "Scegli il sesso del tuo partner della chat"
