--- a/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-26 11:17+0300\n"
+"POT-Creation-Date: 2016-02-11 21:34+0300\n"
 "PO-Revision-Date: Wed Jan 20 2016 21:18:36 GMT+0100\n"
-"Last-Translator: Marco Giustetto <arducode@gmail.com>\n"
+"Last-Translator: Leonardo Guida <leonardo.99.torino@gmail.com>\n"
 "Language-Team: Italian\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -52,7 +52,7 @@ msgid ""
 "help you to find partners quickly. Total bonus count: {0}. Congratulations!"
 msgstr ""
 "Hai ricevuto un bonus per aver invitato una persona al bot. I bonus vi "
-"aiuterà a trovare partner in fretta. Conteggio totale bonus: {0}. "
+"aiuteranno a trovare partner in fretta. Conteggio totale dei bonus: {0}. "
 "Congratulazioni! 🤑"
 
 #: randtalkbot/stranger.py:128
@@ -68,9 +68,9 @@ msgstr ""
 "Sto trovando {0} persone disponibili a parlare. Per parlarci puoi aspettare "
 "un po', oppure selezionare “Non specificare” come sesso del tuo partner di "
 "chat o selezionare altre lingue premendo /setup.\n"
-"Più persone — più divertimento! Stendere Rand Talk tra i vostri amici. Più "
-"persone useranno il tuo link — ricerca del partner più veloce sarà. "
-"Condividi il seguente messaggio nelle vostre chat:"
+"Più persone — più divertimento! Aiutaci a espandere Rand Talk tra i vostri "
+"amici. Più persone useranno il tuo link più la ricerca del partner sarà "
+"veloce. Condividi il seguente messaggio nelle tue chat:"
 
 #: randtalkbot/stranger.py:136
 #, python-brace-format
@@ -79,9 +79,9 @@ msgid ""
 "want to have some fun? Rand Talk will help you! It's a bot matching you with "
 "a random stranger of desired sex speaking on your language. {0}"
 msgstr ""
-"Vuoi parlare con qualcuno, la pratica in lingue straniere o volete solo "
-"divertirsi un po '? Rand Talk vi aiuterà! E 'un ragazzo più adatti con uno "
-"sconosciuto casuale del sesso desiderato parlando la vostra lingua. {0}"
+"Vuoi parlare con qualcuno o soltanto esercitarti in altre lingue, o vuoi "
+"soltanto divertirti? Rand Talk ti aiuterà! Una persona del sesso scelto "
+"verrà a parlare con voi nella lunga scelta. {0}"
 
 #: randtalkbot/stranger.py:152
 msgid "Looking for partner was stopped."
@@ -104,7 +104,7 @@ msgstr "Parla {0} per favore."
 #: randtalkbot/stranger.py:237
 #, python-brace-format
 msgid "You can use the following languages: {0}."
-msgstr "Si può parlare le seguenti lingue: {0}."
+msgstr "Si possono parlare le seguenti lingue: {0}."
 
 #: randtalkbot/stranger.py:244
 msgid "Here's another stranger."
@@ -145,7 +145,7 @@ msgstr ""
 msgid "Have a nice chat!"
 msgstr "Divertiti 🤗"
 
-#: randtalkbot/stranger.py:345
+#: randtalkbot/stranger.py:359
 msgid "Looking for a stranger for you."
 msgstr "Ricerca partner per la chat in corso... 🤔"
 
@@ -189,8 +189,8 @@ msgid ""
 "Don't try to fool me. Forward message with the link to your friends and "
 "receive well-earned bonuses that will help you to find partner quickly."
 msgstr ""
-"Non cercare di ingannare me. 😉 Messaggio inoltra con il link ai tuoi amici e "
-"ricevere i bonus meritate che vi aiuterà a trovare partner di fretta."
+"Non cercare di ingannarmi. 😉 Inoltra questo messaggio ai tuoi amici e "
+"riceverai un bonus che ti aiuterà a trovare un partner più in fretta."
 
 #: randtalkbot/stranger_handler.py:147
 msgid ""
