--- a/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-11 21:34+0300\n"
+"POT-Creation-Date: 2016-02-12 13:47+0300\n"
 "PO-Revision-Date: Wed Jan 20 2016 21:18:36 GMT+0100\n"
 "Last-Translator: Leonardo Guida <leonardo.99.torino@gmail.com>\n"
 "Language-Team: Italian\n"
@@ -65,9 +65,9 @@ msgid ""
 "people will use your link -- the faster partner's search will be. Share the "
 "following message in your chats:"
 msgstr ""
-"Sto trovando {0} persone disponibili a parlare. Per parlarci puoi aspettare "
-"un po', oppure selezionare “Non specificare” come sesso del tuo partner di "
-"chat o selezionare altre lingue premendo /setup.\n"
+"Sto ancora cercando fra {0} persone. Per parlarci puoi aspettare un po', "
+"oppure selezionare “Non specificare” come sesso del tuo partner di chat o "
+"selezionare altre lingue premendo /setup.\n"
 "Più persone — più divertimento! Aiutaci a espandere Rand Talk tra i vostri "
 "amici. Più persone useranno il tuo link più la ricerca del partner sarà "
 "veloce. Condividi il seguente messaggio nelle tue chat:"
@@ -145,7 +145,7 @@ msgstr ""
 msgid "Have a nice chat!"
 msgstr "Divertiti 🤗"
 
-#: randtalkbot/stranger.py:359
+#: randtalkbot/stranger.py:360
 msgid "Looking for a stranger for you."
 msgstr "Ricerca partner per la chat in corso... 🤔"
 
