Italian help message was extended with /setup command description.

--- a/randtalkbot/locale/en/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/en/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-12 13:47+0300\n"
+"POT-Creation-Date: 2016-02-15 00:24+0300\n"
 "PO-Revision-Date: 2016-01-16 10:10+0300\n"
 "Last-Translator: Pyotr Ermishkin <quasiyoke@gmail.com>\n"
 "Language-Team: English\n"
@@ -174,12 +174,10 @@ msgstr ""
 "settings, apply /setup.\n"
 "\n"
 "If you have any suggestions or require help, please contact @quasiyoke. When "
-"asking questions, please provide this number: {0}\n"
+"asking questions, please provide this number: {0}.\n"
 "\n"
-"You're welcome to inspect and improve [Rand Talk's source code.](https://"
-"github.com/quasiyoke/RandTalkBot)\n"
-"\n"
-"version {1}"
+"You're welcome to inspect and improve [Rand Talk v. {1} source code](https://"
+"github.com/quasiyoke/RandTalkBot)."
 
 #: randtalkbot/stranger_handler.py:133
 msgid ""
