--- a/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/it/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-12 13:47+0300\n"
+"POT-Creation-Date: 2016-02-15 00:24+0300\n"
 "PO-Revision-Date: Wed Jan 20 2016 21:18:36 GMT+0100\n"
 "Last-Translator: Leonardo Guida <leonardo.99.torino@gmail.com>\n"
 "Language-Team: Italian\n"
@@ -171,18 +171,15 @@ msgid ""
 msgstr ""
 "*Aiuto*\n"
 "\n"
-"Premi (o scrivi) /begin per cercare una persona con cui iniziare la chat; se "
-"vuoi cambiare persona, chiudi la chat premendo o scrivendo /end e cerca "
-"un'altra persona.\n"
+"Scrivere o premere /begin per cercare una persona con cui iniziare la chat; "
+"se vuoi cambiare persona, chiudi la chat usare /end e cerca un'altra "
+"persona. Per scegliere le tue impostazioni puoi utilizzare /setup.\n"
 "\n"
 "Se hai suggerimenti o hai bisogno di aiuto scrivi pure all'admin del bot, "
-"@quasiyoke. Nel messaggio per favore includi questo numero: {0}\n"
+"@quasiyoke. Nel messaggio per favore includi questo numero: {0}.\n"
 "\n"
-"Se vuoi migliorare Rand Talk o eliminare dei bug direttamente sul codice, "
-"puoi trovarlo a questo link: [Rand Talk's source code.](https://github.com/"
-"quasiyoke/RandTalkBot)\n"
-"\n"
-"versione {1}"
+"Sei il benvenuto per controllare e migliorare il [codice sorgente del Rand "
+"Talk v. {1}](https://github.com/quasiyoke/RandTalkBot)."
 
 #: randtalkbot/stranger_handler.py:133
 msgid ""
