--- a/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-02-12 13:47+0300\n"
+"POT-Creation-Date: 2016-02-15 00:24+0300\n"
 "PO-Revision-Date: 2016-01-16 10:10+0300\n"
 "Last-Translator: Pyotr Ermishkin <quasiyoke@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -178,10 +178,8 @@ msgstr ""
 "С предложением по боту или за справкой вы можете обратиться к @quasiyoke. "
 "Задавая вопрос, сообщите пожалуйста это число: {0}.\n"
 "\n"
-"Мы будем рады вашим дополнениям и замечаниям к [исходным кодам Rand Talk'а]"
-"(https://github.com/quasiyoke/RandTalkBot).\n"
-"\n"
-"Версия {1}"
+"Мы будем рады вашим дополнениям и замечаниям к [исходным кодам Rand Talk "
+"вер. {1}](https://github.com/quasiyoke/RandTalkBot)."
 
 #: randtalkbot/stranger_handler.py:133
 msgid ""
